--- a/lib/bycoders_cnab_web/templates/layout/app.html.heex
+++ b/lib/bycoders_cnab_web/templates/layout/app.html.heex
@@ -1,5 +1,15 @@
-<main class="container">
-  <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-  <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-  <%= @inner_content %>
-</main>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="csrf-token" content={csrf_token_value()}>
+    <title>Phoenix with TypeScript and React</title>
+    <link rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
+    <script defer type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
+  </head>
+  <body>
+    <%= @inner_content %>
+  </body>
+</html>
